# cogwheel

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  README.txt  environment.yaml  pylintrc  pyproject.toml  requirements.txt  setup.py
_private_scratch/: _private_ias.py  analysis_handle.py  cosmology.py  error_reader.py  event_handle.py  grid.py  harmonic_mode_utils.py  maximize_event_likelihood.py  non_lvc_conventions.py  parameter_aliasing.py  parameter_label_formatting.py  pe_plotting.py  standard_intrinsic_transformations.py  waveform_gwsurrogate.py
cogwheel/: Future-detectors.csv  __init__.py  _private_ias.py  bookkeeping.py  cosmology.py  data.py  error_reader.py  extrinsic_sampler.py  grid.py  gw_plotting.py  gw_prior.py  gw_utils.py  jump_test.py  likelihood.py  marginalized_distance.py  parameter_estimation.py  plotting.py  pn_coordinates.py  posterior.py  postprocessing.py  prior.py  sampling.py  skyloc_angles.py  utils.py  waveform.py
cogwheel/coherent_score/: __init__.py  base.py  coherent_score_hm.py  coherent_score_qas.py  intrinsic_prior.py  skydict.py
cogwheel/coherent_score_hm/: coherent_score_hm.py  coherent_score_likelihood.py  skydict.py
cogwheel/data/: GW150914.npz  GW151012.npz  GW151216.npz  GW151226.npz  GW170104.npz  GW170121.npz  GW170202.npz  GW170304.npz  GW170403.npz  GW170425.npz  GW170608.npz  GW170727.npz  GW170814.npz  GW170823.npz  GW190413_134308.npz  GW190421_213856.npz  GW190424_180648.npz  GW190503_185404.npz  GW190512_180714.npz  GW190513_205428.npz  GW190514_065416.npz  GW190519_153544.npz  GW190521_074359.npz  GW190527_092055.npz  GW190620_030421.npz  GW190630_185205.npz  GW190719_215514.npz  GW190720_000836.npz  GW190731_140936.npz  GW190910_112807.npz  GW190916_200658.npz  GW190925_232845.npz  GW190929_012149.npz  GW191103_012549.npz  GW191109_010717.npz  GW191204_110529.npz  GW191204_171526.npz  GW191222_033537.npz  GW191230_180458.npz  GW200112_155838.npz  (+9 more)
cogwheel/factorized_qas/: __init__.py  extrinsic_integration.py  intrinsic_prior.py  marg_likelihood.py
cogwheel/fast_marginalization/: adaptive.py  intrinsic_prior.py  marginalized_extrinsic.py
cogwheel/gw_prior/: __init__.py  combined.py  extrinsic.py  intrinsic_prior.py  linear_free.py  mass.py  miscellaneous.py  pn.py  spin.py  tides.py  twosquircle.py
cogwheel/likelihood/: __init__.py  coherent_score_likelihood.py  coherent_score_likelihood_qas.py  extrinsic_integration.py  likelihood.py  marg_likelihood.py  marginalized_distance.py  marginalized_distance_phase.py  marginalized_extrinsic.py  marginalized_extrinsic_qas.py  reference_waveform_finder.py  relative_binning.py
cogwheel/sampler_free/: evidence_calculator.py
cogwheel/tests/: test_gw_prior.py  test_gw_utils.py  test_posterior.py  test_sampler_free.py  (+2 more)
docs/: environment.yaml  requirements.txt
notebooks/: _private_O3a_pe_examples.ipynb  _private_ias_make_datafiles.ipynb  analysis_handle_usage.ipynb  coherent_score_hm_sampling.ipynb  coherent_score_sampling.ipynb  magic_sampling.ipynb  posterior_sampling.ipynb
scripts/: finalize_meta_yaml.py  prepare_conda_upload.sh
tutorials/: README.md  event_data.ipynb  extrinsic_marginalization.ipynb  factorized_phm.ipynb  factorized_qas.ipynb  make_your_own_prior.ipynb  rapid_BBH_PE.ipynb  rapid_pe_BBH.py  rapid_pe_GW170817_NRTidal.py  rapid_pe_GW170817_XAS.py  sampling_a_posterior.ipynb
(+46 files in other folders)
