[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cogwheel-pe"
dynamic = ["version"]
requires-python = ">= 3.9"
authors = [
  {name = "Javier Roulet"},
  {name = "Tejaswi Venumadhav"},
  {name = "Jonathan Mushkin"},
  {name = "Tousif Islam"},
  {name = "Seth Olsen"},
  {name = "Jay Wadekar"},
]
dependencies = [
  "ipykernel",
  "ipympl",
  "ipywidgets",
  "notebook",
  "numba",
  "pandas",
  "pyarrow",
  "setuptools_scm",
  "gwpy",
  "dynesty",
  "nautilus-sampler",
  "pymultinest",
  "zeus-mcmc",
]
maintainers = [
  {name = "Javier Roulet", email = "jroulet@caltech.edu"}
]
description = "Parameter estimation of gravitational wave sources"
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
"Source" = "https://github.com/jroulet/cogwheel"

[tool.setuptools]
packages = ["cogwheel"]

[tool.setuptools.package-data]
"cogwheel.data" = ["events_metadata.csv",
                   "example_asds/*.npy"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_file = "cogwheel/_version.py"
